--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -5,7 +5,7 @@
         <h5 class="m-0">Mitarbeiter-Liste</h5>
       </div>
       <div class="col">
-        <p style="text-align: right;" class="align-self-center m-2 me-4">
+        <p style="text-align: right" class="align-self-center m-2 me-4">
           <span class="material-icons text-success cursor-pointer me-1" [routerLink]="['/employee/editor']">add</span>
           <span class="material-icons text-success cursor-pointer me-1" (click)="searchForString()">search</span>
           <span class="material-icons text-success cursor-pointer" (click)="fetchData()">
@@ -16,9 +16,9 @@
       </div>
     </div>
     <div class="row m-auto">
-        <form (submit)="searchForString()">
-          <input class="form-control form" placeholder="Suche..." [(ngModel)]="searchValue" name="searchValue" />
-        </form>
+      <form (submit)="searchForString()">
+        <input class="form-control form" placeholder="Suche..." [(ngModel)]="searchValue" name="searchValue" />
+      </form>
     </div>
   </div>
   <div class="row m-auto mt-3">
@@ -30,19 +30,26 @@
       </thead>
       <tbody>
         <ng-container *ngFor="let e of employees$ | async">
-          <tr class="tr-hover" [class.tr-active]="isEmployeeContainedInSelection(e)" (click)="selectEmployee(e)"
-            (dblclick)="goToEmployee(e.id)">
-            <td class="user-select-none">{{e.id}}</td>
-            <td class="user-select-none">{{e.firstName}}</td>
-            <td class="user-select-none">{{e.lastName}}</td>
+          <tr
+            class="tr-hover"
+            [class.tr-active]="isEmployeeContainedInSelection(e)"
+            (click)="selectEmployee(e)"
+            (dblclick)="goToEmployee(e.id)"
+          >
+            <td class="user-select-none">{{ e.id }}</td>
+            <td class="user-select-none">{{ e.firstName }}</td>
+            <td class="user-select-none">{{ e.lastName }}</td>
           </tr>
         </ng-container>
       </tbody>
     </table>
   </div>
   <div *ngIf="isAnythingSelected()" class="cursor-pointer expand">
-    <app-confirmable-delete [alignButtonRight]="'true'" (deleteEmit)="deleteEmployeeSelection()"
-      [message]="getDeleteConfirmationMessage()"></app-confirmable-delete>
+    <app-confirmable-delete
+      [alignButtonRight]="'true'"
+      (deleteEmit)="deleteEmployeeSelection()"
+      [message]="getDeleteConfirmationMessage()"
+    ></app-confirmable-delete>
   </div>
   <div *ngIf="(employees$ | async)?.length === 0">
     <p>Es wurden keine Mitarbeiter*innen gefunden.</p>
