--- a/src/app/qualification-details/qualification-details.component.html
+++ b/src/app/qualification-details/qualification-details.component.html
@@ -1,52 +1,47 @@
 <div class="container">
-    <ng-container *ngIf="found; else qualificationNotFound">
-        <app-status-bar [title]="'Details Qualifikation ' + skill"></app-status-bar>
-        <ng-container *ngIf="showSaveSuccess">
-            <div 
-            class="alert alert-success justify-content-end" 
-            role="alert">
-            Speichern erfolgreich!
-            </div>
-        </ng-container>
-        <div class="row">
-            <div class="col">
-                <p>Name:</p>
-            </div>
-            <div class="col">
-                <p>{{ this.qualification?.skill }}</p>
-            </div>
-        </div>
-        <div class="row">
-            <h5>Mitarbeiter</h5>
-            <div class="col">
-                <table class="table">
-                    <thead>
-                        <th>ID</th>
-                        <th>Vorname</th>
-                        <th>Nachname</th>
-                    </thead>
-                    <tbody>
-                        <ng-container *ngFor="let e of qualificationEmployees?.employees">
-                            <tr class="tr-hover" [routerLink]="['/employee/', e.id]">
-                                <td>{{e.id}}</td>
-                                <td>{{e.firstName}}</td>
-                                <td>{{e.lastName}}</td>
-                            </tr>
-                        </ng-container>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <app-confirmable-delete 
-        (deleteEmit)="deleteQualification()"
-        [message]="'Soll die Qualifikation wirklich gelöscht werden?'"
-        [failed]="failed"
-        [failedMessage]="failedMessage"
-        (resetErrorEmit)="resetDeletionError()"
-        ></app-confirmable-delete>
+  <ng-container *ngIf="found; else qualificationNotFound">
+    <app-status-bar [title]="'Details Qualifikation ' + skill"></app-status-bar>
+    <ng-container *ngIf="showSaveSuccess">
+      <div class="alert alert-success justify-content-end" role="alert">Speichern erfolgreich!</div>
     </ng-container>
-    <ng-template #qualificationNotFound>
-        <app-not-found
-            [message]="'Die Qualifikation ' + skill + ' konnte nicht gefunden werden.'"></app-not-found>
-    </ng-template>
+    <div class="row">
+      <div class="col">
+        <p>Name:</p>
+      </div>
+      <div class="col">
+        <p>{{ this.qualification?.skill }}</p>
+      </div>
+    </div>
+    <div class="row">
+      <h5>Mitarbeiter</h5>
+      <div class="col">
+        <table class="table">
+          <thead>
+            <th>ID</th>
+            <th>Vorname</th>
+            <th>Nachname</th>
+          </thead>
+          <tbody>
+            <ng-container *ngFor="let e of qualificationEmployees?.employees">
+              <tr class="tr-hover" [routerLink]="['/employee/', e.id]">
+                <td>{{ e.id }}</td>
+                <td>{{ e.firstName }}</td>
+                <td>{{ e.lastName }}</td>
+              </tr>
+            </ng-container>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <app-confirmable-delete
+      (deleteEmit)="deleteQualification()"
+      [message]="'Soll die Qualifikation wirklich gelöscht werden?'"
+      [failed]="failed"
+      [failedMessage]="failedMessage"
+      (resetErrorEmit)="resetDeletionError()"
+    ></app-confirmable-delete>
+  </ng-container>
+  <ng-template #qualificationNotFound>
+    <app-not-found [message]="'Die Qualifikation ' + skill + ' konnte nicht gefunden werden.'"></app-not-found>
+  </ng-template>
 </div>
