--- a/src/app/qualification-list/qualification-list.component.html
+++ b/src/app/qualification-list/qualification-list.component.html
@@ -5,8 +5,10 @@
         <h5 class="m-0">Qualifikationen-Liste</h5>
       </div>
       <div class="col">
-        <p style="text-align: right;" class="align-self-center m-2 me-4">
-          <span class="material-icons text-success cursor-pointer me-1" [routerLink]="['/qualification/editor']">add</span>
+        <p style="text-align: right" class="align-self-center m-2 me-4">
+          <span class="material-icons text-success cursor-pointer me-1" [routerLink]="['/qualification/editor']"
+            >add</span
+          >
           <span class="material-icons text-success cursor-pointer me-1" (click)="searchForString()">search</span>
           <span class="material-icons text-success cursor-pointer" (click)="fetchData()">
             <ng-container *ngIf="isSearchModeEnabled(); else reload">backspace</ng-container>
@@ -17,8 +19,12 @@
     </div>
     <div class="row m-auto">
       <form (submit)="searchForString()">
-        <input class="form-control form" placeholder="Suche..." [(ngModel)]="searchValue"
-          [ngModelOptions]="{standalone: true}">
+        <input
+          class="form-control form"
+          placeholder="Suche..."
+          [(ngModel)]="searchValue"
+          [ngModelOptions]="{ standalone: true }"
+        />
       </form>
     </div>
   </div>
@@ -29,17 +35,26 @@
       </thead>
       <tbody>
         <ng-container *ngFor="let q of qualifications$ | async">
-          <tr class="tr-hover" [class.tr-active]="isQualificationContainedInSelection(q)"
-            (click)="selectQualification(q)" (dblclick)="goToQualification(q.skill)">
-            <td>{{q.skill}}</td>
+          <tr
+            class="tr-hover"
+            [class.tr-active]="isQualificationContainedInSelection(q)"
+            (click)="selectQualification(q)"
+            (dblclick)="goToQualification(q.skill)"
+          >
+            <td>{{ q.skill }}</td>
           </tr>
         </ng-container>
       </tbody>
     </table>
     <div *ngIf="isAnythingSelected()" class="cursor-pointer expand">
-      <app-confirmable-delete [alignButtonRight]="'true'" (deleteEmit)="deleteQualificationSelection()"
-        [message]="getDeleteConfirmationMessage()" [failed]="failed" [failedMessage]="failedMessage"
-        (resetErrorEmit)="resetDeletionError()"></app-confirmable-delete>
+      <app-confirmable-delete
+        [alignButtonRight]="'true'"
+        (deleteEmit)="deleteQualificationSelection()"
+        [message]="getDeleteConfirmationMessage()"
+        [failed]="failed"
+        [failedMessage]="failedMessage"
+        (resetErrorEmit)="resetDeletionError()"
+      ></app-confirmable-delete>
     </div>
     <div *ngIf="(qualifications$ | async)?.length === 0">
       <p>Es wurden keine Qualifikationen gefunden.</p>
