--- a/src/styles.css
+++ b/src/styles.css
@@ -3,61 +3,63 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
 * {
-    font-family: 'Inter', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
-.form-control:focus{
-    border-color: #5cb85c;  
-    box-shadow: 0px 0px 0px 5px #5cb85c3d; 
-    -webkit-box-shadow: #5cb85c;
-} 
+.form-control:focus {
+  border-color: #5cb85c;
+  box-shadow: 0px 0px 0px 5px #5cb85c3d;
+  -webkit-box-shadow: #5cb85c;
+}
 
 .cursor-pointer {
-    cursor: pointer;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+  cursor: pointer;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .user-select-none {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .center-items {
-    display: grid;
-    align-items: center;
+  display: grid;
+  align-items: center;
 }
 
 .center-heading {
-    text-align: center;
+  text-align: center;
 }
 
 .login-format {
-    width: 35%; margin: auto;
+  width: 35%;
+  margin: auto;
 }
 
 .margin-y-10 {
-    margin-top: 10px;
-    margin-bottom: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .tr-active {
-    background: rgba(0, 128, 0, 0.133);
+  background: rgba(0, 128, 0, 0.133);
 }
 
 .tr-hover:hover {
-    background: rgba(0, 128, 0, 0.133);
-    cursor: pointer;
+  background: rgba(0, 128, 0, 0.133);
+  cursor: pointer;
 }
 
-.remove-input-focus-outline textarea:focus, input:focus {
-    outline: none;
+.remove-input-focus-outline textarea:focus,
+input:focus {
+  outline: none;
 }
