--- a/src/app/qualification-editor/qualification-editor.component.html
+++ b/src/app/qualification-editor/qualification-editor.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <app-status-bar [title]="'Qualifikation erstellen'" [saveable]="'true'" (saveEmit)="save()"></app-status-bar>
+  <app-status-bar [title]="'Qualifikation erstellen'" [saveable]="true" (saveEmit)="save()"></app-status-bar>
   <div class="row mt-4">
     <ng-container *ngIf="callbackAlertShown">
       <div
