--- a/src/app/status-bar/status-bar.component.html
+++ b/src/app/status-bar/status-bar.component.html
@@ -5,12 +5,12 @@
   <div class="col-9 d-flex align-items-center">
     <h4 class="m-0">{{ title }}</h4>
   </div>
-  <ng-container *ngIf="editable === 'true'">
+  <ng-container *ngIf="editable">
     <div class="col-1 expand center-items">
       <span class="material-icons cursor-pointer text-success" [routerLink]="[editRoute]">edit</span>
     </div>
   </ng-container>
-  <ng-container *ngIf="saveable === 'true'">
+  <ng-container *ngIf="saveable">
     <div class="col-1 expand center-items">
       <span class="material-icons cursor-pointer text-success" (click)="save()">save</span>
     </div>
