--- a/src/app/employee-editor/employee-editor.component.html
+++ b/src/app/employee-editor/employee-editor.component.html
@@ -16,44 +16,50 @@
     <div class="row m-auto">
       <div class="row my-2">
         <label for="firstName" class="form-label">Vorname</label>
-        <input type="email" class="form-control" id="firstName" placeholder="Max" [(ngModel)]="employee.firstName" />
+        <input type="text" class="form-control" id="firstName" placeholder="Max" [(ngModel)]="employee.firstName" />
+        <p class="text-danger">{{ getFieldValidationResult('firstName') }}</p>
       </div>
       <div class="row my-2">
         <label for="lastName" class="form-label">Nachname</label>
         <input
-          type="email"
+          type="text"
           class="form-control"
           id="lastName"
           placeholder="Mustermann"
           [(ngModel)]="employee.lastName"
         />
+        <p class="text-danger">{{ getFieldValidationResult('lastName') }}</p>
       </div>
       <div class="row my-2">
         <label for="street" class="form-label">Straße + Hausnr.</label>
         <input
-          type="email"
+          type="text"
           class="form-control"
           id="street"
           placeholder="Musterstr. 11"
           [(ngModel)]="employee.street"
         />
+        <p class="text-danger">{{ getFieldValidationResult('street') }}</p>
       </div>
       <div class="row my-2">
         <label for="postcode" class="form-label">Postleitzahl</label>
-        <input type="email" class="form-control" id="postcode" placeholder="12345" [(ngModel)]="employee.postcode" />
+        <input type="text" class="form-control" id="postcode" placeholder="12345" [(ngModel)]="employee.postcode" />
+        <p class="text-danger">{{ getFieldValidationResult('postcode') }}</p>
       </div>
       <div class="row my-2">
         <label for="city" class="form-label">Stadt</label>
-        <input type="email" class="form-control" id="city" placeholder="Musterstadt" [(ngModel)]="employee.city" />
+        <input type="text" class="form-control" id="city" placeholder="Musterstadt" [(ngModel)]="employee.city" />
+        <p class="text-danger">{{ getFieldValidationResult('city') }}</p>
       </div>
       <div class="row my-2">
         <label for="phone" class="form-label">Telefonnr.</label>
-        <input type="email" class="form-control" id="phone" placeholder="+49 123 456789" [(ngModel)]="employee.phone" />
+        <input type="text" class="form-control" id="phone" placeholder="+49 123 456789" [(ngModel)]="employee.phone" />
+        <p class="text-danger">{{ getFieldValidationResult('phone') }}</p>
       </div>
       <div class="row my-2">
         <label for="qualifications" clsas="form-label">Qualifikationen</label>
         <div class="form-control m-1">
-          <div class="">
+          <div>
             <ng-container *ngFor="let skill of employee.skillSet">
               <div class="d-inline" style="white-space: nowrap">
                 <a
